--- a/EventManagement_Application/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/EventManagement_Application/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -4,20 +4,32 @@
     ViewData["Title"] = "Forgot your password?";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h2>Enter your email.</h2>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.Email" class="form-label"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset Password</button>
-        </form>
+<div class="container-fluid">
+    <div class="row justify-content-center align-items-center min-vh-100">
+        <div class="col-sm-12 col-md-8 col-lg-6">
+            <form method="post" class="w-100 mx-auto login-form w-50 mx-3 mb-4 border border-dark-subtle p-4 rounded shadow">
+                <h2 class="mb-4 fw-bold text-center">Forgot Your Password?</h2>
+                <p class="text-center text-muted">Enter your email to receive a password reset link.</p>
+
+                <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+
+                <div class="mb-3">
+                    <label asp-for="Input.Email" class="form-label">Email</label>
+                    <input asp-for="Input.Email" class="form-control border border-dark-subtle" autocomplete="username" placeholder="Enter your email" />
+                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                </div>
+
+                <div class="d-flex justify-content-center">
+                    <button type="submit" class="bg-primary-color border-0 my-4 btn-lg fw-bold text-white w-75">
+                        Reset Password
+                    </button>
+                </div>
+
+                <div class="text-start">
+                    <p class="mb-1"><a asp-page="./Login" class="text-dark text-decoration-none">Back to login</a></p>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
