--- a/EventManagement_Application/Areas/Identity/Pages/Account/Login.cshtml
+++ b/EventManagement_Application/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,78 +5,50 @@
     ViewData["Title"] = "Log in";
 }
 
-<h1>@ViewData["Title"]</h1>
-<div class="row">
-    <div class="col-md-4">
-        <section>
-            <form id="account" method="post">
-                <h2>Use a local account to log in.</h2>
-                <hr />
+<div class="container-fluid">
+    <div class="row justify-content-center align-items-center min-vh-100">
+        <!-- Image Section -->
+        <div class="col-sm-12 col-md-6 col-lg-6">
+            <img src="~/images/Login-image.svg" alt="Login Image" class="login-image w-auto" />
+        </div>
+
+        <!-- Form Section -->
+        <div class="col-sm-12 col-md-8 col-lg-6 mt-5">
+            <form id="account" method="post" class="w-100 mx-auto login-form w-50 mx-3 mb-4 border border-dark-subtle p-4 rounded shadow">
+                <h2 class="mb-4 fw-bold text-center">Access Your Account</h2>
                 <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-                <div class="form-floating mb-3">
-                    <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+
+                <div class="mb-3">
                     <label asp-for="Input.Email" class="form-label">Email</label>
+                    <input asp-for="Input.Email" class="form-control border border-dark-subtle" autocomplete="username" placeholder="Enter your email" />
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
-                <div class="form-floating mb-3">
-                    <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" placeholder="password" />
+
+                <div class="mb-3">
                     <label asp-for="Input.Password" class="form-label">Password</label>
+                    <input asp-for="Input.Password" type="password" class="form-control border border-dark-subtle" autocomplete="current-password" placeholder="Enter your password" />
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
-                <div class="checkbox mb-3">
-                    <label asp-for="Input.RememberMe" class="form-label">
-                        <input class="form-check-input" asp-for="Input.RememberMe" />
-                        @Html.DisplayNameFor(m => m.Input.RememberMe)
-                    </label>
+
+                <div class="custom-checkbox d-flex mt-2">
+                    <input class="form-check-input input-check" asp-for="Input.RememberMe" />
+                    <label asp-for="Input.RememberMe" class="custom-txt fw-bold ms-2">Remember me</label>
                 </div>
-                <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
+
+                <div class="d-flex justify-content-center">
+                    <button type="submit" class="bg-primary-color border-0 my-4 btn-lg fw-bold text-white w-75">Log in</button>
                 </div>
-                <div>
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
-                    <p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-                    </p>
+
+                <div class="text-start">
+                    <p class="mb-1"><a asp-page="./ForgotPassword" class="text-dark text-decoration-none">Forgot your password?</a></p>
+                    <p class="mb-1"><a asp-page="./Register" class="text-dark text-decoration-none" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a></p>
+                    <p><a id="resend-confirmation" class="text-dark text-decoration-none" asp-page="./ResendEmailConfirmation">Resend email confirmation</a></p>
                 </div>
             </form>
-        </section>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to log in.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
+        </div>
     </div>
 </div>
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
