--- a/EventManagement_Application/Pages/Organizer/Events/Edit.cshtml
+++ b/EventManagement_Application/Pages/Organizer/Events/Edit.cshtml
@@ -24,9 +24,9 @@
         <span asp-validation-for="Event.Description" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="Event.Date"></label>
-        <input asp-for="Event.Date" class="form-control" type="datetime-local" />
-        <span asp-validation-for="Event.Date" class="text-danger"></span>
+        <label asp-for="Event.CreationDate"></label>
+        <input asp-for="Event.CreationDate" class="form-control" type="datetime-local" />
+        <span asp-validation-for="Event.CreationDate" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="Event.Location"></label>
