--- a/EventManagement_Application/Pages/Shared/_LoginPartial.cshtml
+++ b/EventManagement_Application/Pages/Shared/_LoginPartial.cshtml
@@ -2,6 +2,9 @@
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
+@{
+    var user = await UserManager.GetUserAsync(User);
+}
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
@@ -9,27 +12,29 @@
     <div class="text-center align-items-center d-flex">
         @if(UserManager.GetUserAsync(User).Result.ProfilePicture != null)
         {
-            <li class="nav-item ">
+            <li class="nav-item">
                     <img class="avatar-profile-picture rounded-circle" alt="profile" src="data:image/*;base64,@(Convert.ToBase64String(UserManager.GetUserAsync(User).Result.ProfilePicture))" />
             </li>
         }
-        <li class="nav-item text-center ">
-            <a  class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+        <li class="nav-item text-center">
+            <a class="nav-link text-white fw-bold" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @user.FirstName!</a>
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
-                <button  type="submit" class="nav-link btn btn-link text-white">Logout</button>
+                <button type="submit" class="nav-link btn btn-link text-white fw-bold">Logout</button>
             </form>
         </li>
     </div>
 }
 else
 {
-    <li class="nav-item">
-        <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Register">Register</a>
+    <li class="nav-item px-2">
+        <a class="nav-link text-white fw-bold" asp-area="Identity" asp-page="/Account/Register">Sign Up</a>
     </li>
-    <li class="nav-item">
-        <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Login">Login</a>
+    <li class="nav-item px-2">
+        <div class="bg-btn rounded-5 px-3">
+            <a class="nav-link text-white fw-bold" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        </div>
     </li>
 }
 </ul>
