--- a/EventManagement_Application/wwwroot/css/site.css
+++ b/EventManagement_Application/wwwroot/css/site.css
@@ -1,14 +1,23 @@
 :root {
     --primary-color: #1e0a3c;
-    --secondary-color: #3659e3; /* Green */
+    --secondary-color: #491B90; /* secondary */
     --accent-color: #e74c3c; /* Red */
     --background-color: #f4f4f4; /* Light Gray */
     --text-color: #333333; /* Dark Gray */
     --light-text-color: #ffffff; /* White */
+    --btn-color: #7E57C2;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 html {
     font-size: 14px;
+    position: relative;
+    min-height: 100%;
 }
 
 @media (min-width: 768px) {
@@ -21,18 +30,26 @@ html {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
-}
-
 body {
-  margin: 0;
-  box-sizing: content-box;
+    box-sizing: content-box;
 }
 
-/*  */
-.profilePicture{
+html,
+body {
+    height: 100%;
+    margin: 0;
+}
+
+ul {
+    list-style-type: none;
+}
+
+.text-primary-color{
+    color: var(--primary-color) !important;
+}
+
+/* profile */
+.profilePicture {
     height: 300px;
     width: 300px;
     object-fit: cover;
@@ -49,15 +66,206 @@ body {
     background-color: var(--primary-color);
 }
 
-.hero-section {
+.first-slide {
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3)), url('/images/background-image.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    width: 100%;
-    min-height: 100vh;
+}
+
+.second-slide {
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3)), url('/images/organizer_event.jpeg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.third-slide {
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3)), url('/images/background-slide3.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.input-group-text {
+    cursor: pointer;
+}
+
+.bg-primary-color {
+    background-color: var(--secondary-color) !important;
+}
+
+.secondary-color {
+    color: var(--secondary-color);
+}
+
+.bg-btn {
+    background-color: var(--btn-color) !important;
+    border-color: var(--btn-color) !important;
+}
+
+.input-check {
+    width: 18px;
+    height: 18px;
+    border: 2px solid var(--primary-color) !important;
+    cursor: pointer;
+    box-shadow: none !important;
+    outline: none !important;
+}
+
+.input-check:checked {
+    background-color: var(--primary-color) !important;
+    border-color: var(--btn-color) !important;
+}
+
+.features-section {
+    background-color: #f8f9fa;
+}
+
+.feature-icon {
+    background-color: var(--btn-color);
+    margin-right: 10px;
+    color: var(--light-text-color);
+}
+
+.feature-item {
     display: flex;
     align-items: center;
-    justify-content: center;
+}
+
+/* footer */
+
+.footer{
+    position: relative !important;
+}
+
+.bg-footer {
+    background-color: var(--primary-color);
+}
+
+.logo {
+    height: 50px;
+    width: 150px;
+}
+
+.margin {
+    margin-top: 120px !important;
+}
+
+.icons li {
+    width: 30px;
+    height: 30px;
     text-align: center;
+    line-height: 30px;
+    border-radius: 50%;
+    margin-left: 10px;
+    border: 1px solid;
+    transition: .6s;
+}
+
+.icons li:hover {
+    transform: rotate(360deg);
+}
+
+.icons li:nth-of-type(1) {
+    color: #3b5999;
+}
+
+.icon1 {
+    color: #3b5999;
+}
+
+.icon1:hover {
+    color: #f3f3f3;
+}
+
+.icons li:nth-of-type(1):hover {
+    background-color: #3b5999;
+    color: #f3f3f3;
+}
+
+.icons li:nth-of-type(2) {
+    color: #ea4c89;
+}
+
+.icons li:nth-of-type(2):hover {
+    background-color: #ea4c89;
+    color: #f3f3f3;
+}
+
+.icon2 {
+    color: #ea4c89;
+}
+
+.icon2:hover {
+    color: #f3f3f3;
+}
+
+.icons li:nth-of-type(3) {
+    color: #1769ff;
+}
+
+.icons li:nth-of-type(3):hover {
+    background-color: #1769ff;
+    color: #f3f3f3;
+}
+
+.icon3 {
+    color: #1769ff;
+}
+
+.icon3:hover {
+    color: #f3f3f3;
+}
+
+.icons li:nth-of-type(4) {
+    color: #dd4b39;
+}
+
+.icon4 {
+    color: #dd4b39;
+}
+
+.icon4:hover {
+    color: #f3f3f3;
+}
+
+.icons li:nth-of-type(4):hover {
+    background-color: #dd4b39;
+    color: #f3f3f3;
+}
+
+.link {
+    text-decoration: none;
+    color: white !important;
+    cursor: pointer;
+}
+
+/* message form */
+
+.contact-section {
+    padding: 50px 0;
+    background-color: #f8f9fa;
+}
+
+.contact-section img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.contact-section .btn {
+    background-color: var(--primary-color);
+    border: none;
+}
+
+.contact-section .btn:hover {
+    background-color: #4834d4;
+}
+
+/* become organizer */
+
+.become-organizer-section {
+    background-color: #f8f9fa;
+    padding: 50px 0;
+    border-radius: 10px;
 }
